Fixed bug in Tomahawk theme that caused screenlet with too mamy columns not being displayed correctly. (i.e. https://localhost:8443/webtools/control/FindGeneric?entityName=Product&find=true) An horizontal scroll bar is now shown at the scrrenlet bottom. This solution has been taken from the actual Flatgrey theme.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1076027 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/tomahawk/webapp/tomahawk/css/style.css
+++ b/themes/tomahawk/webapp/tomahawk/css/style.css
@@ -1207,7 +1207,8 @@ height: auto !important;
 height: 1%;
 padding-bottom: 10px;
 margin-bottom:1em;
-background: transparent url(../images/screenlet_shadow1.png) repeat-x 0% 100%;
+background-color: #BFBFBF;
+overflow: auto;
 }
 
 /* Special Screenlet Handling for locals and timezone window */
@@ -1316,7 +1317,6 @@ cursor: pointer;
 }
 
 .screenlet-body {
-background: #bfbfbf;
 border-top:#ebe9db thin solid;
 border-left:#dad8cd thin solid;
 border-right:#9d9d9b thin solid;
@@ -1347,6 +1347,7 @@ margin:0;
 .login-screenlet {
 width: 400px;
 margin: 100px auto 300px;
+padding: 0px;
 }
 
 .login-screenlet .screenlet-title-bar {
